src/io/compiler/core/LANGrammarParser.java
// Generated from LANGrammar.g4 by ANTLR 4.13.2
package io.compiler.core;

	import io.compiler.types.*;
	import java.util.ArrayList;
	import java.util.HashMap;
	import io.compiler.core.exceptions.*;
	import io.compiler.core.ast.*;
	import java.util.Stack;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class LANGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, PROGRAMA=6, FIMPROG=7, SE=8, SENAO=9, 
		DECLARE=10, LEIA=11, ESCREVA=12, ENTAO=13, WHILE=14, DO=15, ID=16, NUMDECIMAL=17, 
		NUM=18, TEXTO=19, WS=20, AD=21, SUB=22, DIV=23, MULT=24, OP_REL=25, OP_AT=26, 
		DP=27, PV=28, VIRG=29, AP=30, FP=31;
	public static final int
		RULE_prog = 0, RULE_declara = 1, RULE_bloco = 2, RULE_cmd = 3, RULE_cmdLeitura = 4, 
		RULE_cmdEscrita = 5, RULE_cmdIf = 6, RULE_cmdExpr = 7, RULE_cmdWhile = 8, 
		RULE_cmdDoWhile = 9, RULE_expr = 10, RULE_exprl = 11, RULE_termo = 12, 
		RULE_termol = 13, RULE_fator = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "declara", "bloco", "cmd", "cmdLeitura", "cmdEscrita", "cmdIf", 
			"cmdExpr", "cmdWhile", "cmdDoWhile", "expr", "exprl", "termo", "termol", 
			"fator"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'NUMBER'", "'STRING'", "'REALNUMBER'", "'{'", "'}'", "'programa'", 
			"'fimprog;'", "'\"se\"'", "'\"senao\"'", "'declare'", "'leia'", "'escreva'", 
			"'entao'", "'enquanto'", "'realize'", null, null, null, null, null, "'+'", 
			"'-'", "'/'", "'*'", null, "':='", "':'", "';'", "','", "'('", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, "PROGRAMA", "FIMPROG", "SE", "SENAO", 
			"DECLARE", "LEIA", "ESCREVA", "ENTAO", "WHILE", "DO", "ID", "NUMDECIMAL", 
			"NUM", "TEXTO", "WS", "AD", "SUB", "DIV", "MULT", "OP_REL", "OP_AT", 
			"DP", "PV", "VIRG", "AP", "FP"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LANGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		private HashMap<String, Var> symbolTable = new HashMap<String, Var>();
		private ArrayList<Var> currentDecl = new ArrayList<Var>();
		private Types currentType;
		private Types leftType = null, rightType = null;
		private Program program = new Program();
		private ArrayList<Command> commandList = new ArrayList<Command>();
		private Stack<ArrayList<Command>> stack = new Stack<ArrayList<Command>>();
		private ExprCommand currentAtrib;
		private String atrib = "";
		private Stack<IfCommand> ifCommandStack = new Stack<IfCommand>();
		private Stack<String> exprStack = new Stack<String>();
		private Stack<WhileCommand> whileStack = new Stack<WhileCommand>();
		private Stack<String> exprWhile = new Stack<String>();
		private Stack<DoWhileCommand> doWhileStack = new Stack<DoWhileCommand>();
		private Stack<String> exprDoWhile = new Stack<String>();
		
		
		public void updateType(){
			for (Var v: currentDecl){
				v.setType(currentType);
				symbolTable.put(v.getId(), v);
			}
		}
		
		public void exibirVar(){
			for (String id: symbolTable.keySet()){
				System.out.println(symbolTable.get(id));
			}
		}
		
		public boolean isDeclared(String id){
			return symbolTable.get(id) != null;
		}
			
		public void confirmedUsed(){
			for(String key: symbolTable.keySet()){
		    		if (!symbolTable.get(key).isUsed()){
		    			throw new UFABCSemanticException("A variável " + "'"+key+"'" + " não está sendo usada");
		    		}
		    	}
		}
		
		public Program getProgram(){
			return this.program;
		}

	public LANGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public TerminalNode PROGRAMA() { return getToken(LANGrammarParser.PROGRAMA, 0); }
		public TerminalNode ID() { return getToken(LANGrammarParser.ID, 0); }
		public BlocoContext bloco() {
			return getRuleContext(BlocoContext.class,0);
		}
		public TerminalNode FIMPROG() { return getToken(LANGrammarParser.FIMPROG, 0); }
		public List<DeclaraContext> declara() {
			return getRuleContexts(DeclaraContext.class);
		}
		public DeclaraContext declara(int i) {
			return getRuleContext(DeclaraContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LANGrammarListener ) ((LANGrammarListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LANGrammarListener ) ((LANGrammarListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30);
			match(PROGRAMA);
			setState(31);
			match(ID);

							program.setName(_input.LT(-1).getText());
							stack.push(new ArrayList<Command>());			
					   
			setState(34); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(33);
				declara();
				}
				}
				setState(36); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==DECLARE );
			setState(38);
			bloco();

				    	confirmedUsed();
				    
			setState(40);
			match(FIMPROG);

				  		program.setSymbolTable(symbolTable);
				  	 	program.setCommandList(stack.pop());
				  	
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaraContext extends ParserRuleContext {
		public TerminalNode DECLARE() { return getToken(LANGrammarParser.DECLARE, 0); }
		public List<TerminalNode> ID() { return getTokens(LANGrammarParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(LANGrammarParser.ID, i);
		}
		public TerminalNode DP() { return getToken(LANGrammarParser.DP, 0); }
		public TerminalNode PV() { return getToken(LANGrammarParser.PV, 0); }
		public List<TerminalNode> VIRG() { return getTokens(LANGrammarParser.VIRG); }
		public TerminalNode VIRG(int i) {
			return getToken(LANGrammarParser.VIRG, i);
		}
		public DeclaraContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declara; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LANGrammarListener ) ((LANGrammarListener)listener).enterDeclara(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LANGrammarListener ) ((LANGrammarListener)listener).exitDeclara(this);
		}
	}

	public final DeclaraContext declara() throws RecognitionException {
		DeclaraContext _localctx = new DeclaraContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declara);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			match(DECLARE);

									currentDecl.clear();
								
			setState(45);
			match(ID);

					 			currentDecl.add(new Var(_input.LT(-1).getText()));
					 	   
			setState(52);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VIRG) {
				{
				{
				setState(47);
				match(VIRG);
				setState(48);
				match(ID);

						 			currentDecl.add(new Var(_input.LT(-1).getText()));
						 	   
				}
				}
				setState(54);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(55);
			match(DP);
			setState(62);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				{
				setState(56);
				match(T__0);
				currentType = Types.NUMBER;
				}
				break;
			case T__1:
				{
				setState(58);
				match(T__1);
				currentType = Types.STRING;
				}
				break;
			case T__2:
				{
				setState(60);
				match(T__2);
				currentType = Types.REALNUMBER;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			updateType();
			setState(65);
			match(PV);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlocoContext extends ParserRuleContext {
		public List<CmdContext> cmd() {
			return getRuleContexts(CmdContext.class);
		}
		public CmdContext cmd(int i) {
			return getRuleContext(CmdContext.class,i);
		}
		public BlocoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloco; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LANGrammarListener ) ((LANGrammarListener)listener).enterBloco(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LANGrammarListener ) ((LANGrammarListener)listener).exitBloco(this);
		}
	}

	public final BlocoContext bloco() throws RecognitionException {
		BlocoContext _localctx = new BlocoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_bloco);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(67);
				cmd();
				}
				}
				setState(70); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 121088L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CmdContext extends ParserRuleContext {
		public CmdLeituraContext cmdLeitura() {
			return getRuleContext(CmdLeituraContext.class,0);
		}
		public CmdEscritaContext cmdEscrita() {
			return getRuleContext(CmdEscritaContext.class,0);
		}
		public CmdExprContext cmdExpr() {
			return getRuleContext(CmdExprContext.class,0);
		}
		public CmdIfContext cmdIf() {
			return getRuleContext(CmdIfContext.class,0);
		}
		public CmdWhileContext cmdWhile() {
			return getRuleContext(CmdWhileContext.class,0);
		}
		public CmdDoWhileContext cmdDoWhile() {
			return getRuleContext(CmdDoWhileContext.class,0);
		}
		public CmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LANGrammarListener ) ((LANGrammarListener)listener).enterCmd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LANGrammarListener ) ((LANGrammarListener)listener).exitCmd(this);
		}
	}

	public final CmdContext cmd() throws RecognitionException {
		CmdContext _localctx = new CmdContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_cmd);
		try {
			setState(78);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LEIA:
				enterOuterAlt(_localctx, 1);
				{
				setState(72);
				cmdLeitura();
				}
				break;
			case ESCREVA:
				enterOuterAlt(_localctx, 2);
				{
				setState(73);
				cmdEscrita();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 3);
				{
				setState(74);
				cmdExpr();
				}
				break;
			case SE:
				enterOuterAlt(_localctx, 4);
				{
				setState(75);
				cmdIf();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 5);
				{
				setState(76);
				cmdWhile();
				}
				break;
			case DO:
				enterOuterAlt(_localctx, 6);
				{
				setState(77);
				cmdDoWhile();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CmdLeituraContext extends ParserRuleContext {
		public TerminalNode LEIA() { return getToken(LANGrammarParser.LEIA, 0); }
		public TerminalNode AP() { return getToken(LANGrammarParser.AP, 0); }
		public TerminalNode ID() { return getToken(LANGrammarParser.ID, 0); }
		public TerminalNode FP() { return getToken(LANGrammarParser.FP, 0); }
		public TerminalNode PV() { return getToken(LANGrammarParser.PV, 0); }
		public CmdLeituraContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdLeitura; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LANGrammarListener ) ((LANGrammarListener)listener).enterCmdLeitura(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LANGrammarListener ) ((LANGrammarListener)listener).exitCmdLeitura(this);
		}
	}

	public final CmdLeituraContext cmdLeitura() throws RecognitionException {
		CmdLeituraContext _localctx = new CmdLeituraContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_cmdLeitura);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(LEIA);
			setState(81);
			match(AP);
			setState(82);
			match(ID);

						 		if(!isDeclared(_input.LT(-1).getText())){
						 			throw new UFABCSemanticException("A seguinte variável não foi declarada " +_input.LT(-1).getText());
						 		}
						 		symbolTable.get(_input.LT(-1).getText()).setInitialized(true);
						 		symbolTable.get(_input.LT(-1).getText()).setUsed(true);
						 		Command cmdRead = new readCommand(symbolTable.get(_input.LT(-1).getText()));
						 		stack.peek().add(cmdRead);
						    
			setState(84);
			match(FP);
			setState(85);
			match(PV);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CmdEscritaContext extends ParserRuleContext {
		public TerminalNode ESCREVA() { return getToken(LANGrammarParser.ESCREVA, 0); }
		public TerminalNode AP() { return getToken(LANGrammarParser.AP, 0); }
		public TerminalNode FP() { return getToken(LANGrammarParser.FP, 0); }
		public TerminalNode PV() { return getToken(LANGrammarParser.PV, 0); }
		public TerminalNode TEXTO() { return getToken(LANGrammarParser.TEXTO, 0); }
		public TerminalNode ID() { return getToken(LANGrammarParser.ID, 0); }
		public CmdEscritaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdEscrita; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LANGrammarListener ) ((LANGrammarListener)listener).enterCmdEscrita(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LANGrammarListener ) ((LANGrammarListener)listener).exitCmdEscrita(this);
		}
	}

	public final CmdEscritaContext cmdEscrita() throws RecognitionException {
		CmdEscritaContext _localctx = new CmdEscritaContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_cmdEscrita);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(ESCREVA);
			setState(88);
			match(AP);
			setState(93);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TEXTO:
				{
				setState(89);
				match(TEXTO);

							 			Command cmdWrite = new WriteCommand(_input.LT(-1).getText());
							 			stack.peek().add(cmdWrite);
							 		
				}
				break;
			case ID:
				{
				setState(91);
				match(ID);

							 		if(!isDeclared(_input.LT(-1).getText())){
							 			throw new UFABCSemanticException("A seguinte variável não foi declarada " +_input.LT(-1).getText());
							 		}
							 		if(!symbolTable.get(_input.LT(-1).getText()).isInitialized()){
							 			throw new UFABCSemanticException("Não houve inicialização da variável "+"'" +_input.LT(-1).getText()+"'");
							 		}
							 		symbolTable.get(_input.LT(-1).getText()).setUsed(true);
							 		Command cmdWrite = new WriteCommand(_input.LT(-1).getText());
							 		stack.peek().add(cmdWrite);
							    
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(95);
			match(FP);
			setState(96);
			match(PV);
			rightType = null;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CmdIfContext extends ParserRuleContext {
		public TerminalNode SE() { return getToken(LANGrammarParser.SE, 0); }
		public TerminalNode AP() { return getToken(LANGrammarParser.AP, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode OP_REL() { return getToken(LANGrammarParser.OP_REL, 0); }
		public TerminalNode FP() { return getToken(LANGrammarParser.FP, 0); }
		public TerminalNode ENTAO() { return getToken(LANGrammarParser.ENTAO, 0); }
		public List<CmdContext> cmd() {
			return getRuleContexts(CmdContext.class);
		}
		public CmdContext cmd(int i) {
			return getRuleContext(CmdContext.class,i);
		}
		public TerminalNode SENAO() { return getToken(LANGrammarParser.SENAO, 0); }
		public CmdIfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdIf; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LANGrammarListener ) ((LANGrammarListener)listener).enterCmdIf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LANGrammarListener ) ((LANGrammarListener)listener).exitCmdIf(this);
		}
	}

	public final CmdIfContext cmdIf() throws RecognitionException {
		CmdIfContext _localctx = new CmdIfContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_cmdIf);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(SE);

							stack.push(new ArrayList<Command>());
							ifCommandStack.push(new IfCommand());
							exprStack.push("");
					   
			setState(101);
			match(AP);
			setState(102);
			expr();
			exprStack.push(_input.LT(-1).getText());
			setState(104);
			match(OP_REL);

								    String leftExpr = exprStack.pop();
			            			exprStack.push(leftExpr + _input.LT(-1).getText());
				   		   
			setState(106);
			expr();
			  String rightExpr = _input.LT(-1).getText();
			            	String fullExpr = exprStack.pop() + rightExpr;
			            	exprStack.push(fullExpr);
			            	ifCommandStack.peek().setExpression(fullExpr); 
			             
			setState(108);
			match(FP);
			setState(109);
			match(ENTAO);
			setState(110);
			match(T__3);
			setState(112); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(111);
				cmd();
				}
				}
				setState(114); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 121088L) != 0) );
